--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-auth:22.2.0'
     implementation 'com.google.firebase:firebase-firestore:24.9.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0' //circle image view for user profiles
     testImplementation 'junit:junit:4.13.2'
