Loads posts but no post details, schedule session sends notification to own device but not post creator yet

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.9.1'
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation 'com.google.firebase:firebase-messaging:23.3.1'
+    implementation 'com.sun.mail:android-mail:1.6.5'
     implementation 'de.hdodenhof:circleimageview:3.1.0' //circle image view for user profiles
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
