--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.google.firebase:firebase-messaging:23.3.1'
     implementation 'com.sun.mail:android-mail:1.6.5'
+    implementation 'com.google.android.gms:play-services-tasks:17.2.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0' //circle image view for user profiles
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
